# RevOS

./: .env.example  .env.prod.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_PHASE2.md  Caddyfile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260628_1238_initial_schema.py  20260629_2151_media_pipeline.py  20260630_0104_token_version.py  20260703_2200_tenant_accounts.py  20260703_2330_totp_2fa.py  20260703_2345_invitations_email_verify.py  (+33 more)
backend/app/: config.py  database.py  deps.py  main.py
backend/tests/: conftest.py  test_accounts.py  test_ai.py  test_analytics.py  test_auth.py  test_automation.py  test_avatar.py  test_avatar_inference.py  test_avatar_render.py  test_benchmark_blend.py  test_benchmark_extract.py  test_benchmark_staleness.py  test_benchmarks.py  test_billing.py  test_brand_book.py  test_brands.py  test_campaign_send.py  test_collaboration_assets.py  test_collaboration_briefs.py  test_collaboration_messages.py  test_collaboration_workspace.py  test_content.py  test_content_autopilot.py  test_creator_claim.py  test_creator_claim_routing.py  test_crm.py  test_email_api.py  test_email_service.py  test_health.py  test_insights.py  test_insights_cw4.py  test_integration_credentials.py  test_integrations.py  test_integrations_adapters.py  test_invitations.py  test_lead_manual_attestation.py  test_leadcapture.py  test_listing_video.py  test_live_insights_adapters.py  test_live_insights_service.py  (+38 more)
(+356 files in other folders)
