[project]
name = "revos-backend"
version = "0.1.0"
description = "RevOS — approval-first marketing & sales automation platform (backend)"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, security (bandit-style), comprehensions.
select = ["E", "F", "I", "B", "S", "C4", "UP"]
# S101 (assert) is fine in tests; allow in test dir below.
# UP047: PEP 695 generic syntax is stylistic — classic TypeVar is fine here.
ignore = ["E501", "UP047"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
"app/seed/*" = ["S106"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
